--- a/templates/employees/employee_master.html
+++ b/templates/employees/employee_master.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <!-- Link to New CSS -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/employee.css') }}">
 
@@ -200,3 +200,4 @@
     </div>
 </div>
 {% endblock %}
+
